--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -176,7 +176,7 @@ body{
 .helloTitle{font-weight:1000;font-size:18px}
 .helloSub{font-size:12px;font-weight:900;opacity:.92}
 
-/* ✅ right side */
+/* ✅ right side stays as before */
 .helloRight{
   display:flex;
   flex-direction:column;
@@ -207,7 +207,7 @@ body{
   white-space:nowrap;
 }
 
-/* ===== Ticker + Cards ===== */
+/* ✅ TradingView ticker */
 .tickerFloat{
   margin-top:12px;
   border-radius:18px;
@@ -278,6 +278,7 @@ body{
 .aSupport{background:linear-gradient(180deg,#38bdf8,#5b6cff)}
 .aText{font-weight:1000;font-size:13px}
 
+/* ===== GLASS BOX ===== */
 .box{
   border:1px solid rgba(255,255,255,.12);
   border-radius:22px;
@@ -473,6 +474,8 @@ body{
 }
 .navItem span{font-size:18px;margin-bottom:4px}
 .navActive{color:#9bdcff;background:rgba(56,189,248,0.10)}
+
+/* BADGE */
 .badge{
   position:absolute;
   top:6px;
@@ -520,7 +523,6 @@ body{
       <div class="t1">Logged in as</div>
       <div id="sideName" class="t2">---</div>
     </div>
-
     <div class="sideAvatar" title="Profile photo">
       <span id="sideAvatarFallback">👤</span>
       <img id="sideAvatarImg" alt="Avatar"/>
@@ -590,7 +592,8 @@ body{
       <div>
         <div class="chips">
           <div class="miniChip">🟢 active</div>
-          <div class="miniChip" id="countryChip">🇳🇬 NG</div>
+          <!-- ✅ country will show ONLY if detected -->
+          <div class="miniChip" id="countryChip" style="display:none"></div>
         </div>
         <div class="helloTitle" id="greetingTitle">Greetings…</div>
         <div class="helloSub" id="helloName">Loading…</div>
@@ -654,15 +657,19 @@ body{
 
 <div class="bottomNav">
   <div class="navItem navActive" onclick="goHome()"><span>🏠</span>Home</div>
+
   <div class="navItem" onclick="goDepositAndClear()">
     <div id="badgeDeposit" class="badge">0</div>
     <span>💳</span>Deposit
   </div>
+
   <div class="navItem" onclick="goWithdrawAndClear()">
     <div id="badgeWithdraw" class="badge">0</div>
     <span>➡</span>Withdraw
   </div>
+
   <div class="navItem" onclick="goPlans()"><span>💼</span>Plans</div>
+
   <div class="navItem" onclick="goProfile()"><span>👤</span>Profile</div>
 </div>
 
@@ -683,11 +690,19 @@ let badgeChannel=null;
   try{
     const { data: sessionData } = await supabaseClient.auth.getSession();
     const session = sessionData?.session;
-    if(!session){ window.location.replace("login.html"); return; }
+
+    if(!session){
+      window.location.replace("login.html");
+      return;
+    }
 
     const { data, error } = await supabaseClient.auth.getUser();
     const user = data?.user;
-    if(error || !user){ window.location.replace("login.html"); return; }
+
+    if(error || !user){
+      window.location.replace("login.html");
+      return;
+    }
 
     if(!user.email_confirmed_at){
       await supabaseClient.auth.signOut();
@@ -738,9 +753,9 @@ function setGreeting(){
   if(el) el.textContent = `${text} ${emoji}`;
 }
 
-/* ✅ iso to flag emoji */
+/* ✅ ISO -> flag */
 function isoToFlag(iso){
-  if(!iso || iso.length !== 2) return "🏳️";
+  if(!iso || iso.length !== 2) return "";
   const code = iso.toUpperCase();
   const A = 0x1F1E6;
   const chars = [...code].map(c => A + c.charCodeAt(0) - 65);
@@ -751,8 +766,6 @@ function isoToFlag(iso){
 function countryNameToISO(name){
   if(!name) return "";
   const n = name.trim().toLowerCase();
-
-  // ✅ map for your profile dropdown list
   const map = {
     "nigeria":"NG",
     "united states":"US",
@@ -772,11 +785,10 @@ function countryNameToISO(name){
     "japan":"JP",
     "singapore":"SG"
   };
-
   return map[n] || "";
 }
 
-/* ✅ detect country from IP (fallback) */
+/* ✅ IP detect (fallback) */
 async function detectCountryFromIP(){
   try{
     const res = await fetch("https://ipapi.co/json/");
@@ -786,16 +798,29 @@ async function detectCountryFromIP(){
   return "";
 }
 
-/* ✅ apply chip */
+/* ✅ apply chip (NO NG fallback) */
 function setCountryChip(iso){
   const el = document.getElementById("countryChip");
   if(!el) return;
-  if(!iso) iso = "NG";
+
+  if(!iso){
+    el.textContent = "";
+    el.style.display = "none";
+    return;
+  }
+
   const flag = isoToFlag(iso);
+  if(!flag){
+    el.textContent = "";
+    el.style.display = "none";
+    return;
+  }
+
   el.textContent = `${flag} ${iso}`;
+  el.style.display = "inline-flex";
 }
 
-/* ✅ date + time 1 line */
+/* ✅ Date + Time single line */
 function startClock(){
   const dtEl = document.getElementById("dateTimeNow");
   if(!dtEl) return;
@@ -844,7 +869,7 @@ function setTopAvatar(avatarUrl){
   }
 }
 
-/* ✅ Sidebar avatar (far right) */
+/* ✅ Sidebar avatar */
 function setSideAvatar(avatarUrl){
   const fb = document.getElementById("sideAvatarFallback");
   const img = document.getElementById("sideAvatarImg");
@@ -861,7 +886,7 @@ function setSideAvatar(avatarUrl){
   }
 }
 
-/* ✅ Name in dashboard + sidebar */
+/* ✅ Username in dashboard + menu */
 function setNameEverywhere(fullName){
   const nice = (fullName && fullName.trim()) ? fullName.trim() : "User";
   const hello = document.getElementById("helloName");
@@ -897,21 +922,24 @@ async function loadDashboardIdentity(){
     setTopAvatar(avatarUrl);
     setSideAvatar(avatarUrl);
 
-    // ✅ COUNTRY: profile country -> IP -> NG
+    // ✅ profile country -> IP -> blank
     let iso = countryNameToISO(countryName);
     if(!iso) iso = await detectCountryFromIP();
-    if(!iso) iso = "NG";
     setCountryChip(iso);
 
   }catch(e){
     setNameEverywhere("User");
     setTopAvatar("");
     setSideAvatar("");
-    setCountryChip("NG");
+    setCountryChip("");
   }
 }
 
-/* init */
+async function logout(){
+  await supabaseClient.auth.signOut();
+  window.location.replace("login.html");
+}
+
 function initWithUser(user){
   currentUserEmail=user.email;
   currentUserId=user.id;
@@ -920,15 +948,9 @@ function initWithUser(user){
   startClock();
 
   document.getElementById("userIdChip").innerText = "ID: " + currentUserId.slice(0,6).toUpperCase();
+
   hideGate();
-
   loadDashboardIdentity();
-}
-
-/* Logout */
-async function logout(){
-  await supabaseClient.auth.signOut();
-  window.location.replace("login.html");
 }
 </script>
 
