--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -253,7 +253,7 @@ body{
   border:1px solid rgba(255,255,255,.10);
   background:
     radial-gradient(900px 400px at 15% 20%, rgba(0,0,0,0.55), transparent 55%),
-    radial-gradient(900px 400px at 70% 20%, rgba(52,211,153,0.24), transparent 55%),
+    radial-gradient(900px 400px at 70% 20%, rgba(52,211,153,.24), transparent 55%),
     linear-gradient(135deg, rgba(3,7,18,0.92), rgba(15,23,42,0.84));
   color:white;
   box-shadow: 0 26px 60px rgba(0,0,0,0.25);
@@ -469,217 +469,75 @@ body{
 }
 .chartFrame{width:100%;height:340px;border:0;display:block}
 
-/* ===== SIDEBAR ===== */
-.overlay{
-  position:fixed; inset:0;
-  background:rgba(0,0,0,.65);
-  display:none; z-index:999;
-  backdrop-filter: blur(4px);
+/* ===== NEW: TOP 10 CRYPTO SECTION ===== */
+.top10Grid{
+  margin-top:12px;
+  display:grid;
+  gap:10px;
 }
-.overlay.show{display:block;}
-.sidebar{
-  position:fixed; top:0; left:-315px;
-  width:292px; height:100vh;
-  padding:16px;
-  z-index:1000;
-  transition: .28s ease;
-  border-right:1px solid rgba(255,255,255,.10);
-  background:
-    radial-gradient(900px 420px at 15% 10%, rgba(91,108,255,.18), transparent 55%),
-    radial-gradient(900px 420px at 90% 20%, rgba(52,211,153,.12), transparent 55%),
-    linear-gradient(180deg, rgba(4,8,20,0.98), rgba(2,6,23,0.98));
-  box-shadow:0 26px 90px rgba(0,0,0,.60);
-  backdrop-filter: blur(16px);
-}
-.sidebar.open{ left:0; }
-.sideTop{
-  display:flex;align-items:center;justify-content:space-between;
-  gap:10px;margin-bottom:12px;
-}
-.sideBrand{
-  display:flex;align-items:center;gap:10px;
-  font-weight:1000;font-size:16px;letter-spacing:.9px;
-  color:#fff;
-  padding:10px 12px;border-radius:16px;
-  border:1px solid rgba(255,255,255,.10);
-  background:linear-gradient(90deg, rgba(109,87,255,.85), rgba(124,77,255,.85));
-  box-shadow:0 16px 50px rgba(109,87,255,.18);
-  min-width:170px;
-}
-.sideBrandIcon{
-  width:30px;height:30px;border-radius:12px;
-  display:grid;place-items:center;
-  background:rgba(255,255,255,.16);
-  border:1px solid rgba(255,255,255,.20);
-}
-.closeBtn{
-  background:rgba(0,0,0,.22);
-  border:1px solid rgba(255,255,255,.14);
-  color:rgba(234,240,255,.95);
-  border-radius:14px;
-  width:44px;height:44px;
-  cursor:pointer;
-  display:grid;place-items:center;
-  font-weight:1000;
-}
-.closeBtn:hover{background:rgba(255,255,255,.08)}
-
-.userTag{
-  padding:12px 12px;
-  border-radius:18px;
-  border:1px solid rgba(255,255,255,.10);
-  background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
-  box-shadow:0 18px 55px rgba(0,0,0,.35);
-  margin:10px 0 14px;
-  display:flex;align-items:center;justify-content:space-between;gap:12px;
-}
-.userTagLeft{min-width:0}
-.userTag .t1{color:rgba(234,240,255,.55);font-weight:1000;font-size:12px}
-.userTag .t2{
-  margin-top:6px;font-weight:1000;
-  white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
-  max-width:180px;
-}
-.sideAvatar{
-  width:46px;height:46px;border-radius:999px;
-  border:1px solid rgba(255,255,255,.14);
-  background:rgba(0,0,0,.25);
-  display:grid;place-items:center;
-  position:relative;overflow:hidden;
-  box-shadow:0 16px 40px rgba(0,0,0,.35);
-  flex:0 0 auto;
-}
-.sideAvatar span{font-size:18px}
-.sideAvatar img{
-  position:absolute; inset:0;
-  width:100%;height:100%;
-  object-fit:cover;
-  display:none;
-}
-
-.menuGroupTitle{
-  margin:10px 0 8px;
-  font-size:12px;font-weight:1000;
-  color:rgba(234,240,255,.50);
-  letter-spacing:.8px;
-  text-transform:uppercase;
-}
-.sideItem{
-  display:flex;align-items:center;gap:12px;
-  padding:12px 12px;border-radius:18px;
-  color:rgba(234,240,255,.82);
-  text-decoration:none;
-  font-weight:1000;
-  border:1px solid rgba(255,255,255,.10);
-  background:rgba(0,0,0,.22);
-  box-shadow:0 16px 40px rgba(0,0,0,.35);
-  margin-bottom:10px;
-  position:relative;overflow:hidden;
-}
-.sideItem:hover{background:rgba(255,255,255,.08)}
-.sideItem .i{
-  width:42px;height:42px;border-radius:16px;
-  display:grid;place-items:center;
-  border:1px solid rgba(255,255,255,.12);
-  background:rgba(255,255,255,.06);
-  font-size:18px;
-}
-.sideItem small{display:block;color:rgba(234,240,255,.55);font-size:12px;font-weight:900;margin-top:2px}
-.activeLink{
-  border:1px solid rgba(56,189,248,.55);
-  background:linear-gradient(180deg, rgba(56,189,248,0.14), rgba(56,189,248,0.08));
-  color:#cfefff;
-}
-.activeLink::after{
-  content:"";
-  position:absolute; inset:0;
-  background: radial-gradient(600px 160px at 30% 20%, rgba(56,189,248,.20), transparent 60%);
-  pointer-events:none;
-}
-.sideLogout{
-  margin-top:10px;
-  background:linear-gradient(90deg, rgba(248,113,113,1), rgba(239,68,68,1));
-  color:#020617;border:none;width:100%;
-  padding:14px;border-radius:18px;font-weight:1000;cursor:pointer;
-  box-shadow:0 18px 55px rgba(239,68,68,.18);
-}
-.sideLogout:hover{filter:brightness(1.03)}
-
-/* ===== DOCK ===== */
-.dock{
-  position:fixed;
-  left:0; right:0; bottom:14px;
-  z-index:2000;
-  pointer-events:none;
-}
-.dockInner{
-  pointer-events:auto;
-  max-width:980px;
-  margin:0 auto;
-  padding:0 14px;
-}
-.dockBar{
-  height:76px;
-  border-radius:28px;
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.14);
-  box-shadow:0 20px 70px rgba(0,0,0,.45);
-  backdrop-filter: blur(14px);
+.top10Item{
   display:flex;
   align-items:center;
   justify-content:space-between;
-  padding:10px 12px;
-  gap:10px;
-}
-.dockItem{
-  flex:1;
-  min-width:70px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  gap:6px;
+  gap:12px;
+  padding:12px;
   border-radius:18px;
-  padding:10px 0;
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(0,0,0,.22);
+  box-shadow:0 16px 40px rgba(0,0,0,.35);
+}
+.coinLeft{
+  display:flex;
+  gap:12px;
+  align-items:center;
+  min-width:0;
+}
+.coinLogo{
+  width:44px;height:44px;border-radius:14px;
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(255,255,255,.06);
+  display:grid;place-items:center;
+  overflow:hidden;
+  flex:0 0 auto;
+}
+.coinLogo img{
+  width:100%;height:100%;
+  object-fit:cover;
+}
+.coinMeta{min-width:0}
+.coinName{
+  font-weight:1000;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.coinSym{
+  margin-top:2px;
+  font-size:12px;
+  font-weight:900;
   color:rgba(234,240,255,.55);
+}
+.coinRight{text-align:right}
+.coinPrice{font-weight:1000}
+.chg{
+  margin-top:4px;
   font-size:12px;
   font-weight:1000;
-  cursor:pointer;
-  user-select:none;
-  position:relative;
-}
-.dockItem .ico{font-size:18px;opacity:.95}
-.dockItem:hover{background:rgba(255,255,255,.06)}
-.dockActive{color:#9bdcff;background:rgba(56,189,248,.10)}
-.dockHome{
-  width:78px;height:78px;border-radius:26px;
-  background:linear-gradient(180deg, rgba(109,87,255,1), rgba(91,108,255,1));
-  box-shadow:0 22px 55px rgba(109,87,255,.30);
-  display:grid;place-items:center;
-  margin-top:-32px;
-  border:1px solid rgba(255,255,255,.16);
-  cursor:pointer;user-select:none;
-  flex:0 0 auto;
-  pointer-events:auto;
-}
-.dockHome span{font-size:28px;color:white}
-.dockHome:hover{filter:brightness(1.05)}
-.dockBadge{
-  position:absolute;
-  top:2px;
-  right:18px;
-  min-width:18px;
-  height:18px;
-  padding:0 6px;
-  border-radius:999px;
-  background:#f87171;
-  color:#020617;
-  font-weight:1000;
-  font-size:11px;
-  display:none;
+  display:inline-flex;
   align-items:center;
-  justify-content:center;
-  border:1px solid rgba(255,255,255,.18);
+  gap:6px;
+  padding:4px 10px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.14);
+}
+.chg.up{color:#22c55e;background:rgba(34,197,94,.12)}
+.chg.down{color:#f87171;background:rgba(248,113,113,.10)}
+.rankPill{
+  font-size:12px;font-weight:1000;
+  padding:6px 10px;border-radius:999px;
+  background:rgba(255,255,255,.10);
+  border:1px solid rgba(255,255,255,.12);
+  color:rgba(234,240,255,.75);
 }
 </style>
 </head>
@@ -881,6 +739,13 @@ body{
       </div>
       <iframe id="tvChart" class="chartFrame"></iframe>
     </div>
+
+    <!-- ✅ TOP 10 MAJOR CRYPTO (added here) -->
+    <div style="height:12px"></div>
+    <h2 style="margin-top:12px">Top 10 Major Crypto</h2>
+    <div class="small">Top market cap coins with live price & 24h change.</div>
+    <div id="top10Msg" class="small" style="margin-top:8px">Loading top coins…</div>
+    <div id="top10List" class="top10Grid"></div>
   </div>
 
 </div>
@@ -903,7 +768,7 @@ body{
    ✅ AUTH GUARD
    ============================================================ */
 const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
-const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
+const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5Mj230M30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
 const EDGE_CLEAR_BADGE_URL = `${SUPABASE_URL}/functions/v1/clear_badge`;
 const supabaseClient=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
@@ -923,6 +788,9 @@ let selectedFiatA={ id:"USD", label:"USD", icon:"$" };
 let selectedFiatB={ id:"NGN", label:"NGN", icon:"₦" };
 
 let orderTimer=null;
+
+/* ✅ Top 10 coins refresh timer */
+let top10Timer=null;
 
 /* ===== auth ===== */
 (async function authGuard(){
@@ -1094,9 +962,7 @@ function nfmt(n, dp=2){
 }
 
 /* ==============================
-   ✅ SEARCHABLE DROPDOWN (ALL ITEMS)
-   - Search by name/symbol/code
-   - No slicing / no limited list
+   ✅ SEARCHABLE DROPDOWN
    ============================== */
 function mountDropdown(elId, items, getLabel, getSearch, onPick, initial){
   const root=document.getElementById(elId);
@@ -1131,7 +997,6 @@ function mountDropdown(elId, items, getLabel, getSearch, onPick, initial){
       renderItems = items.filter(x => getSearch(x).includes(q));
     }
 
-    // render only "visible window" chunk for performance but keep ALL scrolling
     const MAX = Math.min(renderItems.length, 600);
     const slice = renderItems.slice(0, MAX);
 
@@ -1199,7 +1064,6 @@ const FAVORITES = [
 ];
 
 async function loadCoinGeckoLists(){
-  // load fiats
   try{
     const fiatRes = await fetch("https://api.coingecko.com/api/v3/simple/supported_vs_currencies");
     const fiats = await fiatRes.json();
@@ -1208,12 +1072,10 @@ async function loadCoinGeckoLists(){
     FIATS = ["USD","NGN","EUR","GBP","CAD","AUD","JPY","CNY","INR"];
   }
 
-  // load all coins (name + symbol)
   try{
     const coinRes = await fetch("https://api.coingecko.com/api/v3/coins/list?include_platform=false");
     const coins = await coinRes.json();
 
-    // build map for favorites first
     const favMap = new Map(FAVORITES.map(f=>[f.id,f]));
     const list = [];
     for(const c of (coins||[])){
@@ -1222,7 +1084,6 @@ async function loadCoinGeckoLists(){
       const sym = (c.symbol||"").toLowerCase();
       list.push({ id:c.id, label:`${c.name}${sym?` (${sym.toUpperCase()})`:""}`, icon:"◈", symbol:sym });
     }
-
     ALL_COINS = [...FAVORITES, ...list];
   }catch{
     ALL_COINS = [...FAVORITES];
@@ -1230,42 +1091,11 @@ async function loadCoinGeckoLists(){
 
   const FIAT_ITEMS = FIATS.map(f => ({ id:f, label:f, icon:"$", symbol:f.toLowerCase() }));
 
-  // mount dropdowns with full search
-  mountDropdown(
-    "ddCryptoA",
-    ALL_COINS,
-    x=>x.label,
-    x=>(`${x.label} ${x.symbol} ${x.id}`).toLowerCase(),
-    x=>{ selectedCryptoA=x; },
-    selectedCryptoA
-  );
+  mountDropdown("ddCryptoA", ALL_COINS, x=>x.label, x=>(`${x.label} ${x.symbol} ${x.id}`).toLowerCase(), x=>{ selectedCryptoA=x; }, selectedCryptoA);
+  mountDropdown("ddCryptoB", FIAT_ITEMS, x=>x.label, x=>(`${x.label} ${x.id}`).toLowerCase(), x=>{ selectedCryptoB=x; }, selectedCryptoB);
 
-  mountDropdown(
-    "ddCryptoB",
-    FIAT_ITEMS,
-    x=>x.label,
-    x=>(`${x.label} ${x.id}`).toLowerCase(),
-    x=>{ selectedCryptoB=x; },
-    selectedCryptoB
-  );
-
-  mountDropdown(
-    "ddFiatA",
-    FIAT_ITEMS,
-    x=>x.label,
-    x=>(`${x.label} ${x.id}`).toLowerCase(),
-    x=>{ selectedFiatA=x; },
-    selectedFiatA
-  );
-
-  mountDropdown(
-    "ddFiatB",
-    FIAT_ITEMS,
-    x=>x.label,
-    x=>(`${x.label} ${x.id}`).toLowerCase(),
-    x=>{ selectedFiatB=x; },
-    selectedFiatB
-  );
+  mountDropdown("ddFiatA", FIAT_ITEMS, x=>x.label, x=>(`${x.label} ${x.id}`).toLowerCase(), x=>{ selectedFiatA=x; }, selectedFiatA);
+  mountDropdown("ddFiatB", FIAT_ITEMS, x=>x.label, x=>(`${x.label} ${x.id}`).toLowerCase(), x=>{ selectedFiatB=x; }, selectedFiatB);
 
   await loadFxRates();
 }
@@ -1290,7 +1120,6 @@ function swapCrypto(){
   selectedCryptoA = selectedCryptoB;
   selectedCryptoB = tmp;
 
-  // rebuild dropdowns
   const FIAT_ITEMS = FIATS.map(f => ({ id:f, label:f, icon:"$", symbol:f.toLowerCase() }));
 
   if(cryptoDirection === "crypto_to_fiat"){
@@ -1303,7 +1132,6 @@ function swapCrypto(){
     mountDropdown("ddCryptoB", FIAT_ITEMS, x=>x.label, x=>(`${x.label} ${x.id}`).toLowerCase(), x=>{selectedCryptoB=x;}, selectedCryptoB);
 
   }else{
-    // fiat -> crypto
     selectedCryptoA = {id:"USD",label:"USD",icon:"$",symbol:"usd"};
     if(!selectedCryptoB?.id || selectedCryptoB.id.length<=4) selectedCryptoB = FAVORITES[0];
 
@@ -1410,22 +1238,15 @@ async function convertFiat(){
 
 /* ========== ORDER BOOK FIXED WITH FALLBACKS ========== */
 function parsePairForProviders(pair){
-  // pair example BTCUSDT
-  const base=pair.replace("USDT","").replace("USD",""); // BTC
-  return {
-    binance: pair,
-    okx: `${base}-USDT`,
-    bybit: `${base}USDT`
-  };
+  const base=pair.replace("USDT","").replace("USD","");
+  return { binance: pair, okx: `${base}-USDT`, bybit: `${base}USDT` };
 }
-
 async function tryBinanceOrderBook(symbol){
   const res = await fetch(`https://api.binance.com/api/v3/depth?symbol=${encodeURIComponent(symbol)}&limit=20`);
   const data = await res.json();
   if(!data?.asks || !data?.bids) throw new Error("binance invalid");
   return { asks:data.asks, bids:data.bids, source:"Binance" };
 }
-
 async function tryOKXOrderBook(instId){
   const res = await fetch(`https://www.okx.com/api/v5/market/books?instId=${encodeURIComponent(instId)}&sz=20`);
   const data = await res.json();
@@ -1433,7 +1254,6 @@ async function tryOKXOrderBook(instId){
   if(!book?.asks || !book?.bids) throw new Error("okx invalid");
   return { asks:book.asks, bids:book.bids, source:"OKX" };
 }
-
 async function tryBybitOrderBook(symbol){
   const res = await fetch(`https://api.bybit.com/v5/market/orderbook?category=spot&symbol=${encodeURIComponent(symbol)}&limit=20`);
   const data = await res.json();
@@ -1441,7 +1261,6 @@ async function tryBybitOrderBook(symbol){
   if(!book?.a || !book?.b) throw new Error("bybit invalid");
   return { asks:book.a, bids:book.b, source:"Bybit" };
 }
-
 async function loadOrderBook(force=false){
   const pair=document.getElementById("obPair").value;
   const asksEl=document.getElementById("asks");
@@ -1455,8 +1274,6 @@ async function loadOrderBook(force=false){
 
   try{
     let book=null;
-
-    // try Binance → OKX → Bybit
     try{ book = await tryBinanceOrderBook(meta.binance); }
     catch(e1){
       try{ book = await tryOKXOrderBook(meta.okx); }
@@ -1468,26 +1285,20 @@ async function loadOrderBook(force=false){
     const asks=(book.asks||[]).slice(0,20);
     const bids=(book.bids||[]).slice(0,20);
 
-    // normalize OKX/Bybit shapes
     const aNorm = asks.map(x => [x[0], x[1]]);
     const bNorm = bids.map(x => [x[0], x[1]]);
 
     asksEl.innerHTML=aNorm.map(a=>`<div class="obItem"><span>${Number(a[0]).toLocaleString()}</span><span>${Number(a[1]).toFixed(6)}</span></div>`).join("") || "<div class='obItem'>No asks</div>";
     bidsEl.innerHTML=bNorm.map(b=>`<div class="obItem"><span>${Number(b[0]).toLocaleString()}</span><span>${Number(b[1]).toFixed(6)}</span></div>`).join("") || "<div class='obItem'>No bids</div>";
-
   }catch(e){
     asksEl.innerHTML="<div class='obItem'>Order book blocked / unavailable</div>";
     bidsEl.innerHTML="<div class='obItem'>Try changing pair</div>";
   }
 }
-
-/* auto refresh every 3s */
 function startOrderAutoRefresh(){
   if(orderTimer) clearInterval(orderTimer);
   orderTimer=setInterval(()=>loadOrderBook(false), 3000);
 }
-
-/* mini candlestick widget */
 function loadChart(){
   const pair=document.getElementById("obPair").value;
   const base=pair.replace("USDT","").toUpperCase();
@@ -1500,6 +1311,64 @@ document.getElementById("obPair").addEventListener("change",()=>{
   loadOrderBook(true);
   loadChart();
 });
+
+/* ✅ NEW: TOP 10 MAJOR CRYPTO */
+function formatMoneyUSD(n){
+  return "$" + Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2, maximumFractionDigits:2});
+}
+function formatPct(p){
+  const v=Number(p||0);
+  const sign=v>=0?"+":"";
+  return sign + v.toFixed(2) + "%";
+}
+async function loadTop10MajorCrypto(){
+  const msg=document.getElementById("top10Msg");
+  const list=document.getElementById("top10List");
+  if(!msg || !list) return;
+
+  msg.textContent="Loading top coins…";
+
+  try{
+    const res = await fetch("https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1&sparkline=false&price_change_percentage=24h");
+    const data = await res.json();
+    if(!Array.isArray(data)) throw new Error("bad data");
+
+    msg.textContent="";
+
+    list.innerHTML = data.map((c,idx)=>{
+      const chg=Number(c?.price_change_percentage_24h || 0);
+      const cls = chg>=0 ? "up" : "down";
+      const arrow = chg>=0 ? "▲" : "▼";
+      return `
+        <div class="top10Item">
+          <div class="coinLeft">
+            <div class="coinLogo">
+              <img src="${c.image}" alt="${c.symbol}">
+            </div>
+            <div class="coinMeta">
+              <div class="coinName">${c.name}</div>
+              <div class="coinSym">${String(c.symbol||"").toUpperCase()}</div>
+            </div>
+          </div>
+
+          <div class="coinRight">
+            <div class="coinPrice">${formatMoneyUSD(c.current_price)}</div>
+            <div class="chg ${cls}">${arrow} ${formatPct(chg)}</div>
+          </div>
+        </div>
+      `;
+    }).join("");
+
+  }catch(e){
+    msg.textContent="Failed to load top coins (network / API blocked).";
+    list.innerHTML="";
+  }
+}
+function startTop10Refresh(){
+  if(top10Timer) clearInterval(top10Timer);
+  loadTop10MajorCrypto();
+  top10Timer=setInterval(loadTop10MajorCrypto, 30000);
+}
 
 /* balance / plan */
 async function loadBalance(){
@@ -1659,6 +1528,9 @@ function initWithUser(user){
     await loadOrderBook(true);
     loadChart();
     startOrderAutoRefresh();
+
+    // ✅ start top 10 list refresh after orderbook
+    startTop10Refresh();
   });
 }
 </script>
