--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -1021,7 +1021,7 @@ function setNameEverywhere(fullName){
   document.getElementById("sideName").textContent=nice;
 }
 
-/* flag */
+/* ========= COUNTRY CHIP FIX (NEW) ========= */
 function isoToFlag(iso){
   if(!iso || iso.length!==2) return "";
   const code=iso.toUpperCase();
@@ -1030,29 +1030,113 @@ function isoToFlag(iso){
 }
 function setCountryChip(iso){
   const el=document.getElementById("countryChip");
-  if(!el || !iso){ el.style.display="none"; el.textContent=""; return; }
+  if(!el) return;
+  if(!iso || iso.length!==2){
+    el.style.display="none";
+    el.textContent="";
+    return;
+  }
   const flag=isoToFlag(iso);
-  if(!flag){ el.style.display="none"; el.textContent=""; return; }
-  el.textContent=`${flag} ${iso}`;
+  if(!flag){
+    el.style.display="none";
+    el.textContent="";
+    return;
+  }
+  el.textContent=`${flag} ${iso.toUpperCase()}`;
   el.style.display="inline-flex";
+}
+function normalizeCountryText(v){
+  if(!v) return "";
+  return String(v)
+    .replace(/[\uD83C-\uDBFF\uDC00-\uDFFF]/g,"")   /* strip emoji flags */
+    .replace(/[^\w\s-]/g," ")
+    .trim()
+    .toLowerCase();
 }
 function countryNameToISO(name){
   if(!name) return "";
-  const n=name.trim().toLowerCase();
+  const raw = String(name).trim();
+  // if user already stored ISO in DB: "NG" "US"
+  if(/^[A-Za-z]{2}$/.test(raw)) return raw.toUpperCase();
+
+  const n=normalizeCountryText(raw);
+
   const map={
-    "nigeria":"NG","united states":"US","united kingdom":"GB","canada":"CA",
-    "germany":"DE","france":"FR","south africa":"ZA","kenya":"KE","ghana":"GH",
-    "united arab emirates":"AE","saudi arabia":"SA","india":"IN","australia":"AU",
-    "brazil":"BR","mexico":"MX","japan":"JP","singapore":"SG"
+    "nigeria":"NG",
+    "ng":"NG",
+    "nigerian":"NG",
+
+    "united states":"US",
+    "united states of america":"US",
+    "usa":"US",
+    "us":"US",
+    "america":"US",
+
+    "united kingdom":"GB",
+    "great britain":"GB",
+    "britain":"GB",
+    "england":"GB",
+    "uk":"GB",
+    "gb":"GB",
+
+    "canada":"CA",
+    "germany":"DE",
+    "france":"FR",
+    "south africa":"ZA",
+    "kenya":"KE",
+    "ghana":"GH",
+
+    "united arab emirates":"AE",
+    "uae":"AE",
+    "dubai":"AE",
+
+    "saudi arabia":"SA",
+    "india":"IN",
+    "australia":"AU",
+    "brazil":"BR",
+    "mexico":"MX",
+    "japan":"JP",
+    "singapore":"SG"
   };
-  return map[n]||"";
+
+  // direct hit
+  if(map[n]) return map[n];
+
+  // fuzzy: if it includes any key
+  for(const key of Object.keys(map)){
+    if(n.includes(key)) return map[key];
+  }
+  return "";
 }
 async function detectCountryFromIP(){
   try{
     const res=await fetch("https://ipapi.co/json/");
     const data=await res.json();
-    if(data?.country_code) return data.country_code.toUpperCase();
+    if(data?.country_code) return String(data.country_code).toUpperCase();
   }catch(e){}
+  return "";
+}
+function detectCountryFromLocale(){
+  try{
+    const loc = (navigator.language || "").toUpperCase(); // e.g. en-NG
+    const parts = loc.split("-");
+    if(parts.length>=2 && /^[A-Z]{2}$/.test(parts[1])) return parts[1];
+  }catch{}
+  return "";
+}
+async function resolveCountryISO(countryNameFromDB){
+  // 1) DB country field
+  let iso = countryNameToISO(countryNameFromDB);
+  if(iso) return iso;
+
+  // 2) IP lookup
+  iso = await detectCountryFromIP();
+  if(iso) return iso;
+
+  // 3) browser locale fallback
+  iso = detectCountryFromLocale();
+  if(iso) return iso;
+
   return "";
 }
 
@@ -1078,8 +1162,7 @@ async function loadDashboardIdentity(){
     setTopAvatar(avatarUrl);
     setSideAvatar(avatarUrl);
 
-    let iso=countryNameToISO(countryName);
-    if(!iso) iso=await detectCountryFromIP();
+    const iso = await resolveCountryISO(countryName);
     setCountryChip(iso);
   }catch(e){
     setNameEverywhere("User");
@@ -1132,7 +1215,6 @@ function mountDropdown(elId, items, getLabel, getSearch, onPick, initial){
       renderItems = items.filter(x => getSearch(x).includes(q));
     }
 
-    // render only "visible window" chunk for performance but keep ALL scrolling
     const MAX = Math.min(renderItems.length, 600);
     const slice = renderItems.slice(0, MAX);
 
@@ -1200,7 +1282,6 @@ const FAVORITES = [
 ];
 
 async function loadCoinGeckoLists(){
-  // load fiats
   try{
     const fiatRes = await fetch("https://api.coingecko.com/api/v3/simple/supported_vs_currencies");
     const fiats = await fiatRes.json();
@@ -1209,12 +1290,10 @@ async function loadCoinGeckoLists(){
     FIATS = ["USD","NGN","EUR","GBP","CAD","AUD","JPY","CNY","INR"];
   }
 
-  // load all coins (name + symbol)
   try{
     const coinRes = await fetch("https://api.coingecko.com/api/v3/coins/list?include_platform=false");
     const coins = await coinRes.json();
 
-    // build map for favorites first
     const favMap = new Map(FAVORITES.map(f=>[f.id,f]));
     const list = [];
     for(const c of (coins||[])){
@@ -1231,7 +1310,6 @@ async function loadCoinGeckoLists(){
 
   const FIAT_ITEMS = FIATS.map(f => ({ id:f, label:f, icon:"$", symbol:f.toLowerCase() }));
 
-  // mount dropdowns with full search
   mountDropdown(
     "ddCryptoA",
     ALL_COINS,
@@ -1291,7 +1369,6 @@ function swapCrypto(){
   selectedCryptoA = selectedCryptoB;
   selectedCryptoB = tmp;
 
-  // rebuild dropdowns
   const FIAT_ITEMS = FIATS.map(f => ({ id:f, label:f, icon:"$", symbol:f.toLowerCase() }));
 
   if(cryptoDirection === "crypto_to_fiat"){
@@ -1304,7 +1381,6 @@ function swapCrypto(){
     mountDropdown("ddCryptoB", FIAT_ITEMS, x=>x.label, x=>(`${x.label} ${x.id}`).toLowerCase(), x=>{selectedCryptoB=x;}, selectedCryptoB);
 
   }else{
-    // fiat -> crypto
     selectedCryptoA = {id:"USD",label:"USD",icon:"$",symbol:"usd"};
     if(!selectedCryptoB?.id || selectedCryptoB.id.length<=4) selectedCryptoB = FAVORITES[0];
 
@@ -1411,8 +1487,7 @@ async function convertFiat(){
 
 /* ========== ORDER BOOK FIXED WITH FALLBACKS ========== */
 function parsePairForProviders(pair){
-  // pair example BTCUSDT
-  const base=pair.replace("USDT","").replace("USD",""); // BTC
+  const base=pair.replace("USDT","").replace("USD","");
   return {
     binance: pair,
     okx: `${base}-USDT`,
@@ -1457,7 +1532,6 @@ async function loadOrderBook(force=false){
   try{
     let book=null;
 
-    // try Binance → OKX → Bybit
     try{ book = await tryBinanceOrderBook(meta.binance); }
     catch(e1){
       try{ book = await tryOKXOrderBook(meta.okx); }
@@ -1469,7 +1543,6 @@ async function loadOrderBook(force=false){
     const asks=(book.asks||[]).slice(0,20);
     const bids=(book.bids||[]).slice(0,20);
 
-    // normalize OKX/Bybit shapes
     const aNorm = asks.map(x => [x[0], x[1]]);
     const bNorm = bids.map(x => [x[0], x[1]]);
 
@@ -1482,13 +1555,11 @@ async function loadOrderBook(force=false){
   }
 }
 
-/* auto refresh every 3s */
 function startOrderAutoRefresh(){
   if(orderTimer) clearInterval(orderTimer);
   orderTimer=setInterval(()=>loadOrderBook(false), 3000);
 }
 
-/* mini candlestick widget */
 function loadChart(){
   const pair=document.getElementById("obPair").value;
   const base=pair.replace("USDT","").toUpperCase();
